Optimization of getFirebaseOffers, change of routes and change of navbar

--- a/src/client/app/shared/navbar/navbar.component.html
+++ b/src/client/app/shared/navbar/navbar.component.html
@@ -15,9 +15,10 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li [routerLink]="['/']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Recherche</a></li>
+        <li [routerLink]="['/']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Paris</a></li>
+        <!-- <li [routerLink]="['/']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Recherche</a></li> -->
         <li [routerLink]="['/contact']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Contact</a></li>
-        <li [routerLink]="['/paris/grand-palais']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Grand Palais</a></li>
+        <!-- <li [routerLink]="['/paris/grand-palais']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Grand Palais</a></li> -->
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
