--- a/src/client/app/landing-pages/poi/parking-detail.component.html
+++ b/src/client/app/landing-pages/poi/parking-detail.component.html
@@ -75,7 +75,7 @@
         <!-- <tfoot> -->
           <tr>
             <td>
-            <button type="button" class="btn btn-primary btn-booking" (click)="modal.open()">Réserver une place</button>
+            <button type="button" class="btn btn-primary btn-booking" (click)="openModal(modal)">Réserver une place</button>
           </tr>
         <!-- </tfoot> -->
         </tbody>
