--- a/src/client/app/about/about.component.html
+++ b/src/client/app/about/about.component.html
@@ -1,46 +1,44 @@
-<h2>TODO Angular2</h2>
-<ul>
-  <li>Mettre un système de login</li>
-  <li><strong>https://github.com/auth0/lock#language-dictionary-specification</strong></li>
-  <li>Lorsqu'on affiche un col-*-6 à droite, faire un mouvement de transition de l'élément central vers la gauche</li>
-</ul>
-
-<h2>TODO divers</h2>
-<ul>
-  <li>Intégrer Google Analytics</li>
-  <li>HTTPS</li>
-  <li>Mettre en place un environement de preproduction</li>
-</ul>
-
-<h2>Inspiration</h2>
-<ul>
-  <li>Captain Train</li>
-  <li>Duolingo</li>
-  <li>Save</li>
-</ul>
-
-
-
-<div class="navbar-header">
-  <a class="navbar-brand" href="#">Auth0 - Angular 2</a>
-  <button class="btn btn-primary btn-margin" (click)="auth.login()" *ngIf="!auth.authenticated()">Log In</button>
-  <button class="btn btn-primary btn-margin" (click)="auth.logout()" *ngIf="auth.authenticated()">Log Out</button>
-</div>
-
-
-<div *ngIf="auth.authenticated() && auth.userProfile">
-  <h4>You are logged in</h4>
+<div class="container">
   <div class="row">
-    <div class="col-md-6">
-      <h3>Profile</h3>
-      <img [src]="auth.userProfile.picture" alt="" class="profile-img">
-      <p><strong>Name: </strong> {{auth.userProfile.name}}</p>
-      <p><strong>Email: </strong> {{auth.userProfile.email}}</p>
-      <p><strong>Nickname: </strong> {{auth.userProfile.nickname}}</p>
-      <p><strong>Created At: </strong> {{auth.userProfile.created_at}}</p>
-      <p><strong>Updated At: </strong> {{auth.userProfile.updated_at}}</p>
+
+    <div class="col-sm-4 contact-box">
+      <img src="img/icon-planet-map.png" class="big-icon">
+      <p class="lead">
+        Rencontrez-nous au<br>
+        <u>39 rue du Caire, 75002 Paris</u>
+      </p>
     </div>
+
+    <div class="col-sm-4 contact-box">
+      <img src="img/icon-astronaut.png" class="big-icon">
+      <p class="lead">
+        Appelez-nous au
+        <u><a href="tel:+33634012345">06.34.01.23.45</a></u>
+      </p>
+    </div>
+
+    <div class="col-sm-4 contact-box">
+      <img src="img/icon-send.png" class="big-icon">
+      <p class="lead">
+        Envoyez-nous un email à <u><a href="mailto:hello@spotnic.co">hello@spotnic.co</a></u>
+      </p>
+    </div>
+
+    <div class="clearfix visible-sm visible-md visible-lg"></div>
+
+    <div class="col-sm-4 col-sm-offset-2 contact-box">
+      <img src="img/icon-facebook.png" class="big-icon">
+      <p class="lead">
+        Suivez-nous sur Facebook depuis <u><a href="https://fb.me/spotnic.co">fb.me/spotnic.co</a></u>
+      </p>
+    </div>
+
+    <div class="col-sm-4 contact-box">
+      <img src="img/icon-chatbot.png" class="big-icon">
+      <p class="lead">
+        Echangez avec notre chatbot Spotnic sur <u><a href="https://m.me/spotnic.co">Messenger</a></u>
+      </p>
+    </div>
+
   </div>
 </div>
-<h4 *ngIf="!auth.authenticated()">You are not logged in, please click 'Log in' button to login</h4>
-<p (click)="test()">Click on me to show details</p>
