--- a/src/client/app/contact/contact.component.css
+++ b/src/client/app/contact/contact.component.css
@@ -5,19 +5,27 @@
   margin-top: 40px;
 }
 
-.contact-box {
-  text-align: center;
+input.form-control, button {
+  margin: 10px 0;
 }
 
-@media (min-width: 768px) {
-  .contact-box p.lead {
-    font-size: 18px;
+input[type=checkbox]
+{
+  -ms-transform: scale(1.5); /* IE */
+  -moz-transform: scale(1.5); /* FF */
+  -webkit-transform: scale(1.5); /* Safari and Chrome */
+  -o-transform: scale(1.5); /* Opera */
+  padding: 10px;
+  margin: 10px;
+}
+
+.narrow {
+  max-width: 500px;
+  margin: auto;
+}
+
+@media (max-width: 768px) {
+  .container {
+    margin-top: 1px;
   }
-}
-
-.contact-box p.lead {
-  max-width: 250px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 10px 0;
 }
